--- a/src/app/components/button/index.sass
+++ b/src/app/components/button/index.sass
@@ -28,7 +28,19 @@
 .p
     background: $color-p
     color: $color-b-p
+    &.outlined
+        background: $color-b-p
+        color: $color-p
+        border: 5px solid $color-p
+        div
+            background: $color-p
 
 .d
     background: $color-d
     color: $color-w
+    &.outlined
+        background: $color-w
+        color: $color-d
+        border: 5px solid $color-d
+        div
+            background: $color-d
