--- a/src/app/components/text/index.sass
+++ b/src/app/components/text/index.sass
@@ -1,1 +1,10 @@
 @import '../../stylesheets/variables'
+
+p
+    width: var(--width)
+    height: var(--height)
+    .text__text--d
+        background: $color-w
+        height: 100%
+        width: 100%
+        border-radius: $br-2
