--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -1,1 +1,10 @@
 
+@import 'stylesheets/variables.sass'
+
+*, *:before, *:after
+    padding: 0
+    margin: 0
+    box-sizing: border-box
+
+body
+    background: BLACK
