--- a/src/app/components/Container/index.sass
+++ b/src/app/components/Container/index.sass
@@ -1,3 +1,7 @@
 .container
     height: var(--height)
     width: var(--width)
+    &.l
+        background-color: white
+    &.d
+        background-color: black
