--- a/src/app/components/Container/index.sass
+++ b/src/app/components/Container/index.sass
@@ -1,7 +1,10 @@
 .container
     height: var(--height)
     width: var(--width)
+    padding: var(--padding)
     &.l
         background-color: white
+        transition: 0.4s ease all
     &.d
         background-color: black
+        transition: 0.4s ease all
