--- a/src/app/components/text/index.sass
+++ b/src/app/components/text/index.sass
@@ -3,8 +3,12 @@
 p
     width: var(--width)
     height: var(--height)
-    .text__text--d
-        background: $color-w
-        height: 100%
-        width: 100%
-        border-radius: $br-2
+    transition: 0.4s ease all
+    a
+        color: $color-b
+        text-decoration: none
+    &.text-p
+        color: $color-w
+        a
+            color: $color-w
+            text-decoration: none
