--- a/src/app/components/switch/index.sass
+++ b/src/app/components/switch/index.sass
@@ -2,21 +2,38 @@
 
 .switch
     height: 20px
-    width: 60px
+    width: 50px
     border-radius: 10px
-    background-color: red
+    background-color: black
     cursor: pointer
+    display: flex
+    align-items: center
+    position: relative
+    .l
+        position: absolute
+        right: 2px
+        color: white
+    .d
+        display: none
     .switch__slider
-        height: 20px
-        width: 20px
+        height: 18px
+        width: 18px
         border-radius: 50%
         background-color: white
         position: relative
         top: 0
-        left: 0
-        transition: 0.4s
+        left: 2px
+        transition: 0.4s ease all
 
 .checked
-    background-color: green
+    background-color: white
     .switch__slider
-        left: 40px
+        left: 30px
+        background-color: black
+    .l
+        display: none
+    .d
+        display: block
+        position: absolute
+        left: 2px
+        color: black
