--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -1,10 +1,12 @@
 
 @import 'stylesheets/variables.sass'
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap')
 
 *, *:before, *:after
     padding: 0
     margin: 0
     box-sizing: border-box
+    font-family: 'Poppins', sans-serif
 
 body
-    background: BLACK
+    background: black
