--- a/src/app/components/text/index.sass
+++ b/src/app/components/text/index.sass
@@ -4,6 +4,7 @@ p
     width: var(--width)
     height: var(--height)
     transition: 0.4s ease all
+    min-height: 30px
     a
         color: $color-b
         text-decoration: none
