--- a/src/app/components/text/index.sass
+++ b/src/app/components/text/index.sass
@@ -13,3 +13,19 @@ p
         a
             color: $color-w
             text-decoration: none
+
+.skeleton-animation
+    display: inline-block
+    width: 100%
+    height: 1em
+    background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%)
+    background-size: 200% 100%
+    animation: skeleton-loading 1.5s infinite
+    border-radius: 10px
+
+@keyframes skeleton-loading
+    0%
+        background-position: -200% 0
+
+    100%
+        background-position: 200% 0
