--- a/src/app/components/Sphere/style/index.scss
+++ b/src/app/components/Sphere/style/index.scss
@@ -2,7 +2,7 @@
   display: flex;
   position: relative;
   transform-style: preserve-3d;
-  top: 30%;
+  top: 0;
   bottom: 0;
   right: 0;
   align-items: center;
