--- a/src/app/components/switch/index.sass
+++ b/src/app/components/switch/index.sass
@@ -4,7 +4,7 @@
     height: 20px
     width: 50px
     border-radius: 10px
-    background-color: black
+    background-color: white
     cursor: pointer
     display: flex
     align-items: center
@@ -12,28 +12,45 @@
     .l
         position: absolute
         right: 2px
-        color: white
+        color: black
     .d
         display: none
     .switch__slider
         height: 18px
         width: 18px
         border-radius: 50%
-        background-color: white
+        background-color: black
         position: relative
         top: 0
         left: 2px
         transition: 0.4s ease all
 
 .checked
-    background-color: white
+    background-color: black
     .switch__slider
         left: 30px
-        background-color: black
+        background-color: white
     .l
         display: none
     .d
         display: block
         position: absolute
         left: 2px
-        color: black
+        color: white
+
+.skeleton-animation
+    display: inline-block
+    width: 100%
+    height: 1em
+    background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%)
+    background-size: 200% 100%
+    animation: skeleton-loading 1.5s infinite
+    border-radius: 10px
+    border: none
+
+@keyframes skeleton-loading
+    0%
+        background-position: -200% 0
+
+    100%
+        background-position: 200% 0
