--- a/src/app/components/button/index.sass
+++ b/src/app/components/button/index.sass
@@ -1,9 +1,10 @@
 @import '../../stylesheets/variables'
 
 .btn
-    border: none
+    border: 1px solid transparent
     width: var(--width)
     height: var(--height)
+    font-size: var(--font-size)
     padding: var(--padding)
     cursor: pointer
     transition: 0.2s
@@ -12,9 +13,22 @@
     display: flex
     justify-content: center
     align-items: center
+    &.l
+        background: $color-b
+        color: $color-w
+        &:hover
+            background: $color-w
+            color: $color-b
+            border: 1px solid $color-b
+    &.d
+        background: $color-w
+        color: $color-b
+        &:hover
+            background: $color-b
+            color: $color-w
+            border: 1px solid $color-w
     &:active
         transform: scale(0.95)
-        transition: 0.2s
     .btn__text--d
         height: 20%
         width: 80%
