--- a/src/app/components/text/index.sass
+++ b/src/app/components/text/index.sass
@@ -17,7 +17,7 @@ p
 .skeleton-animation
     display: inline-block
     width: 100%
-    height: 1em
+    height: 100%
     background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%)
     background-size: 200% 100%
     animation: skeleton-loading 1.5s infinite
