--- a/src/app/components/Sphere/style/index.scss
+++ b/src/app/components/Sphere/style/index.scss
@@ -1,320 +1,9 @@
-.main-wrapper {
-  display: flex;
-  position: relative;
-  transform-style: preserve-3d;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  align-items: center;
-  justify-content: center;
-
-  .sphere-wrapper {
-    transform-style: preserve-3d;
-    width: var(--width);
-    height: var(--height);
-    position: relative;
-    -webkit-animation: rotate3d 10s linear infinite;
-    animation: rotate3d 10s linear infinite;
-    .plane {
-      position: absolute;
-      transform-style: preserve-3d;
-      top: 0;
-      right: 0;
-      left: 0;
-      bottom: 0;
-      .spoke-0 .dot,
-      .spoke-36 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0s alternate both;
-        animation: pulsate 0.5s infinite 0s alternate both;
-      }
-      .spoke-1 .dot,
-      .spoke-35 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.055555556s alternate both;
-        animation: pulsate 0.5s infinite 0.055555556s alternate both;
-      }
-      .spoke-2 .dot,
-      .spoke-34 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.1111111s alternate both;
-        animation: pulsate 0.5s infinite 0.1111111s alternate both;
-      }
-      .spoke-3 .dot,
-      .spoke-33 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.16666667s alternate both;
-        animation: pulsate 0.5s infinite 0.6666667s alternate both;
-      }
-      .spoke-4 .dot,
-      .spoke-32 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.22222222s alternate both;
-        animation: pulsate 0.5s infinite 0.22222222s alternate both;
-      }
-      .spoke-5 .dot,
-      .spoke-31 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.27777778s alternate both;
-        animation: pulsate 0.5s infinite 0.27777778s alternate both;
-      }
-      .spoke-6 .dot,
-      .spoke-30 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.33333333s alternate both;
-        animation: pulsate 0.5s infinite 0.33333333s alternate both;
-      }
-      .spoke-7 .dot,
-      .spoke-29 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.3888888s alternate both;
-        animation: pulsate 0.5s infinite 0.3888888s alternate both;
-      }
-      .spoke-8 .dot,
-      .spoke-28 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.4444444s alternate both;
-        animation: pulsate 0.5s infinite 0.4444444s alternate both;
-      }
-      .spoke-9 .dot,
-      .spoke-27 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.5s alternate both;
-        animation: pulsate 0.5s infinite 0.5s alternate both;
-      }
-      .spoke-10 .dot,
-      .spoke-26 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.55555556s alternate both;
-        animation: pulsate 0.5s infinite 0.55555556s alternate both;
-      }
-      .spoke-11 .dot,
-      .spoke-25 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.6111111s alternate both;
-        animation: pulsate 0.5s infinite 0.6111111s alternate both;
-      }
-      .spoke-12 .dot,
-      .spoke-24 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.6666667s alternate both;
-        animation: pulsate 0.5s infinite 0.6666667s alternate both;
-      }
-      .spoke-13 .dot,
-      .spoke-23 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.7222222s alternate both;
-        animation: pulsate 0.5s infinite 0.7222222s alternate both;
-      }
-      .spoke-14 .dot,
-      .spoke-22 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.7777778s alternate both;
-        animation: pulsate 0.5s infinite 0.7777778s alternate both;
-      }
-      .spoke-15 .dot,
-      .spoke-21 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.8333333s alternate both;
-        animation: pulsate 0.5s infinite 0.8333333s alternate both;
-      }
-      .spoke-16 .dot,
-      .spoke-20 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.8888889s alternate both;
-        animation: pulsate 0.5s infinite 0.8888889s alternate both;
-      }
-      .spoke-17 .dot,
-      .spoke-19 .dot {
-        -webkit-animation: pulsate 0.5s infinite 0.9444444s alternate both;
-        animation: pulsate 0.5s infinite 0.9444444s alternate both;
-      }
-      .spoke-18 .dot,
-      .spoke-20 .dot {
-        -webkit-animation: pulsate 0.5s infinite 1s alternate both;
-        animation: pulsate 0.5s infinite 1s alternate both;
-      }
-      .spoke {
-        transform-origin: 0 0;
-        transform-style: preserve-3d;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        height: var(--height);
-      }
-      .spoke.spoke-1 {
-        transform: rotate(10deg);
-      }
-      .spoke.spoke-2 {
-        transform: rotate(20deg);
-      }
-      .spoke.spoke-3 {
-        transform: rotate(30deg);
-      }
-      .spoke.spoke-4 {
-        transform: rotate(40deg);
-      }
-      .spoke.spoke-5 {
-        transform: rotate(50deg);
-      }
-      .spoke.spoke-6 {
-        transform: rotate(60deg);
-      }
-      .spoke.spoke-7 {
-        transform: rotate(70deg);
-      }
-      .spoke.spoke-8 {
-        transform: rotate(80deg);
-      }
-      .spoke.spoke-9 {
-        transform: rotate(90deg);
-      }
-      .spoke.spoke-10 {
-        transform: rotate(100deg);
-      }
-      .spoke.spoke-11 {
-        transform: rotate(110deg);
-      }
-      .spoke.spoke-12 {
-        transform: rotate(120deg);
-      }
-      .spoke.spoke-13 {
-        transform: rotate(130deg);
-      }
-      .spoke.spoke-14 {
-        transform: rotate(140deg);
-      }
-      .spoke.spoke-15 {
-        transform: rotate(150deg);
-      }
-      .spoke.spoke-16 {
-        transform: rotate(160deg);
-      }
-      .spoke.spoke-17 {
-        transform: rotate(170deg);
-      }
-      .spoke.spoke-18 {
-        transform: rotate(180deg);
-      }
-      .spoke.spoke-19 {
-        transform: rotate(190deg);
-      }
-      .spoke.spoke-20 {
-        transform: rotate(200deg);
-      }
-      .spoke.spoke-21 {
-        transform: rotate(210deg);
-      }
-      .spoke.spoke-22 {
-        transform: rotate(220deg);
-      }
-      .spoke.spoke-23 {
-        transform: rotate(230deg);
-      }
-      .spoke.spoke-24 {
-        transform: rotate(240deg);
-      }
-      .spoke.spoke-25 {
-        transform: rotate(250deg);
-      }
-      .spoke.spoke-26 {
-        transform: rotate(260deg);
-      }
-      .spoke.spoke-27 {
-        transform: rotate(270deg);
-      }
-      .spoke.spoke-28 {
-        transform: rotate(280deg);
-      }
-      .spoke.spoke-29 {
-        transform: rotate(290deg);
-      }
-      .spoke.spoke-30 {
-        transform: rotate(300deg);
-      }
-      .spoke.spoke-31 {
-        transform: rotate(310deg);
-      }
-      .spoke.spoke-32 {
-        transform: rotate(320deg);
-      }
-      .spoke.spoke-33 {
-        transform: rotate(330deg);
-      }
-      .spoke.spoke-34 {
-        transform: rotate(340deg);
-      }
-      .spoke.spoke-35 {
-        transform: rotate(350deg);
-      }
-    }
-    .plane-1 {
-      animation: izquierda 15s infinite;
-    }
-  }
-}
-
-.dot.l {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background: #fff;
-  left: -3px;
-  top: 100%;
-  transform: rotate(90deg);
-}
-.dot.d {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background: #000000;
-  left: -3px;
-  top: 100%;
-  transform: rotate(90deg);
-}
-.dot.d::before {
-  content: '';
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background: #fff;
-  left: -3px;
-  top: 100%;
-  transform: matrix(0.1, 0, 0, 10, 0, 0);
-}
-.dot.l::before {
-  content: '';
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background: #000000;
-  left: -3px;
-  top: 100%;
-  transform: matrix(0.1, 0, 0, 10, 0, 0);
-}
-.plane.plane-1 {
-  transform: rotateY(15deg);
-}
-.plane.plane-2 {
-  transform: rotateY(30deg);
-}
-.plane.plane-3 {
-  transform: rotateY(45deg);
-}
-.plane.plane-4 {
-  transform: rotateY(60deg);
-}
-.plane.plane-5 {
-  transform: rotateY(75deg);
-}
-.plane.plane-6 {
-  transform: rotateY(90deg);
-}
-.plane.plane-7 {
-  transform: rotateY(105deg);
-}
-.plane.plane-8 {
-  transform: rotateY(120deg);
-}
-.plane.plane-9 {
-  transform: rotateY(135deg);
-}
-.plane.plane-10 {
-  transform: rotateY(150deg);
-}
-.plane.plane-11 {
-  transform: rotateY(165deg);
-}
-.plane.plane-12 {
-  transform: rotateY(180deg);
-}
+$dot-size: 10px;
+$dot-bg-l: #fff;
+$dot-bg-d: #000;
+$dot-transform: rotate(90deg);
+$sphere-animation-duration: 15s;
+$dot-animation-duration: 1s;
 
 @keyframes rotate3d {
   0% {
@@ -333,25 +22,138 @@
     transform: rotate3d(1, 1, 1, 360deg);
   }
 }
+
 @keyframes pulsate {
   0% {
-    transform: rotateX(90deg) scale(0.3) translateZ(20px);
-  }
-}
-@keyframes izquierda {
-  0% {
-    transform: rotateZ(90deg);
-  }
-  25% {
-    transform: rotateY(90deg);
-  }
-  50% {
-    transform: rotateZ(90deg);
-  }
-  75% {
-    transform: rotateY(90deg);
+    transform: rotateX(90deg) scale(0.7) translateZ(10px);
+    opacity: 0.7;
   }
   100% {
+    transform: rotateX(0deg) scale(1) translateZ(0);
+    opacity: 1;
+  }
+}
+
+@keyframes izquierda {
+  0%,
+  100% {
     transform: rotateZ(90deg);
+  }
+  50% {
+    transform: rotateY(90deg);
+  }
+}
+
+.main-wrapper {
+  display: flex;
+  position: relative;
+  transform-style: preserve-3d;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  align-items: center;
+  justify-content: center;
+
+  &.visible {
+    .sphere-wrapper {
+      animation: rotate3d $sphere-animation-duration linear infinite;
+    }
+  }
+
+  .sphere-wrapper {
+    transform-style: preserve-3d;
+    width: var(--width);
+    height: var(--height);
+    position: relative;
+    /* animation: rotate3d $sphere-animation-duration linear infinite; */ /* Comentado para activar la animación cuando sea visible */
+
+    .plane {
+      position: absolute;
+      transform-style: preserve-3d;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+
+      @for $i from 0 through 36 {
+        .spoke-#{$i} {
+          .dot {
+            animation: pulsate
+              $dot-animation-duration
+              alternate
+              both
+              infinite
+              $i *
+              0.1s;
+          }
+        }
+      }
+
+      .spoke {
+        transform-origin: 0 0;
+        transform-style: preserve-3d;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        height: var(--height);
+      }
+
+      @for $i from 1 through 36 {
+        .spoke-#{$i} {
+          transform: rotate($i * 10deg);
+        }
+      }
+    }
+
+    .plane-9 {
+      animation: izquierda 15s infinite;
+    }
+  }
+}
+
+.dot {
+  position: absolute;
+  width: $dot-size;
+  height: $dot-size;
+  border-radius: 50%;
+  left: -3px;
+  top: 100%;
+  transform: $dot-transform;
+  transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
+
+  &.l {
+    background: $dot-bg-d;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 40px;
+      height: 1px;
+      border-radius: 50%;
+      background: $dot-bg-d;
+      top: 3px;
+    }
+  }
+
+  &.d {
+    background: $dot-bg-l;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 40px;
+      height: 1px;
+      border-radius: 50%;
+      background: $dot-bg-l;
+      top: 3px;
+    }
+  }
+}
+
+.plane {
+  @for $i from 1 through 12 {
+    &-#{$i} {
+      transform: rotateY($i * 30deg) rotateX(90deg);
+    }
   }
 }
