--- a/src/app/stylesheets/variables.sass
+++ b/src/app/stylesheets/variables.sass
@@ -1,8 +1,8 @@
 //==COLORS==
-$color-p: #f0901a
-$color-d: #FFDAF7
+$color-p: #E33939
+$color-d: #FC98E6
 $color-b: #000000
-$color-b-p: #331616
+$color-b-p: #180C0C
 $color-w: #FFFFFF
 
 //==Borders==
