--- a/src/app/components/switch/index.sass
+++ b/src/app/components/switch/index.sass
@@ -1,10 +1,10 @@
 @import '../../stylesheets/variables'
 
 .switch
-    height: 20px
-    width: 50px
+    height: 30px
+    width: 75px
     border-radius: 10px
-    background-color: black
+    background-color: $color-w
     cursor: pointer
     display: flex
     align-items: center
@@ -12,24 +12,24 @@
     .l
         position: absolute
         right: 2px
-        color: white
+        color: $color-w
     .d
         display: none
     .switch__slider
-        height: 18px
-        width: 18px
+        height: 24px
+        width: 24px
         border-radius: 50%
-        background-color: white
+        background-color: $color-b
         position: relative
         top: 0
-        left: 2px
+        left: 10px
         transition: 0.4s ease all
 
 .checked
-    background-color: white
+    background-color: $color-b
     .switch__slider
-        left: 30px
-        background-color: black
+        left: 40px
+        background-color: $color-w
     .l
         display: none
     .d
