--- a/src/app/components/text/index.sass
+++ b/src/app/components/text/index.sass
@@ -4,8 +4,8 @@ p, span
     width: var(--width)
     height: var(--height)
     transition: 0.2s ease all
-    min-height: 30px
     font-weight: var(--font-weight)
+
     a
         color: $color-w
         text-decoration: none
@@ -19,6 +19,20 @@ p, span
         a
             color: $color-w
             text-decoration: none
+    &.s
+        font-size: 0.7rem
+
+    &.m
+        font-size: 1rem
+
+    &.sm
+        font-size: 1.5rem
+
+    &.l
+        font-size: 2rem
+
+    &.xl
+        font-size: 4rem
 
 .skeleton-animation
     display: inline-block
