--- a/src/app/modules/navbar/styles.sass
+++ b/src/app/modules/navbar/styles.sass
@@ -6,6 +6,7 @@
     padding: 1rem
     transition: all 0.3s ease
     z-index: 2
+    backdrop-filter: blur(10px)
 
     &.scrolling-up
         transform: translateY(-100%)
