--- a/src/app/components/Container/index.sass
+++ b/src/app/components/Container/index.sass
@@ -5,6 +5,7 @@
     width: var(--width)
     padding: var(--padding)
     align-items: var(--align)
+    text-decoration: none
     &.l
         background-color: $color-b-p
         transition: 0.4s ease all
