Changes: - Added svgs and Gif - Added GifComponent - Added ProjectCard component - Refixed text component

--- a/src/app/components/text/index.sass
+++ b/src/app/components/text/index.sass
@@ -1,14 +1,12 @@
 @import '../../stylesheets/variables'
 
-p, span
+.text
     width: var(--width)
     height: var(--height)
     transition: 0.2s ease all
     font-weight: var(--font-weight)
 
-    a
-        color: $color-w
-        text-decoration: none
+    text-decoration: none
     &.text-d
         color: $color-b
         a
