Changes: - Added fontawesome lib - Added DeviceContext - Added key, styles, divRef, buttonRef in buttonPropsInterface - Added transform and transition props in containerProps - Added filtercard component - Added animation card in projectCard styles - Refactored projectCard component - Added px/rem injection in textprops interface - Removed FadeContext - Added projectSection and aboutSection - Added simpleHash function in functions - Added GlobalStyles

--- a/src/app/components/ProjectCard/index.module.scss
+++ b/src/app/components/ProjectCard/index.module.scss
@@ -8,6 +8,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  animation-duration: 0.5s;
 
   &:hover {
     transform: scale(1.05);
@@ -63,5 +64,41 @@
     .icon {
       filter: none;
     }
+  }
+}
+
+.card.bounceIn {
+  animation-name: bounceIn;
+}
+
+.card.bounceOut {
+  animation-name: bounceOut;
+}
+
+@keyframes bounceIn {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes bounceOut {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
   }
 }
