--- a/src/app/components/switch/index.sass
+++ b/src/app/components/switch/index.sass
@@ -1,10 +1,10 @@
 @import '../../stylesheets/variables'
 
 .switch
-    height: 30px
-    width: 75px
-    border-radius: 10px
-    background-color: $color-w
+    height: 1.87rem
+    width: 4.68rem
+    border-radius: 0.625rem
+    background-color: $w
     cursor: pointer
     display: flex
     align-items: center
@@ -12,24 +12,24 @@
     .l
         position: absolute
         right: 2px
-        color: $color-w
+        color: $w
     .d
         display: none
     .switch__slider
-        height: 24px
-        width: 24px
+        height: 1.5rem
+        width: 1.5rem
         border-radius: 50%
-        background-color: $color-b
+        background-color: $d
         position: relative
         top: 0
-        left: 10px
+        left: 0.625rem
         transition: 0.4s ease all
 
 .checked
-    background-color: $color-b
+    background-color: $d
     .switch__slider
-        left: 40px
-        background-color: $color-w
+        left: 2.5rem
+        background-color: $w
     .l
         display: none
     .d
