--- a/src/app/components/text/index.sass
+++ b/src/app/components/text/index.sass
@@ -8,14 +8,14 @@
 
     text-decoration: none
     &.text-d
-        color: $color-b
+        color: $d
         a
-            color: $color-b
+            color: $d
             text-decoration: none
     &.text-p
-        color: $color-w
+        color: $w
         a
-            color: $color-w
+            color: $w
             text-decoration: none
     &.s
         font-size: 0.7rem
