--- a/src/app/components/Container/index.sass
+++ b/src/app/components/Container/index.sass
@@ -7,8 +7,8 @@
     align-items: var(--align)
     text-decoration: none
     &.l
-        background-color: $color-b-p
+        background-color: $d
         transition: 0.4s ease all
     &.d
-        background-color: $color-w
+        background-color: $w
         transition: 0.4s ease all
