--- a/src/app/components/button/index.sass
+++ b/src/app/components/button/index.sass
@@ -8,40 +8,53 @@
     padding: var(--padding)
     cursor: pointer
     transition: 0.2s
-    border-radius: $br-1
+    border-radius: 0.625rem
     font-weight: 600
     display: flex
     justify-content: center
     align-items: center
 
     &.l
-        background: $color-b
-        color: $color-w
+        background: $d
+        color: $w
         border: 1px solid transparent
 
         &:hover
-            background: $color-w
-            color: $color-b
-            border: 1px solid $color-b
+            background: $w
+            color: $d
+            border: 1px solid $d
+
+        &.disabledbtn
+            background: $disabled-w-btn
+            color: $font-color-disabled-w
+            border: 1px solid transparent
+            cursor: not-allowed
 
     &.d
-        background: $color-w
-        color: $color-b
+        background: $w
+        color: $d
         border: 1px solid transparent
         &:hover
-            background: $color-b
-            color: $color-w
-            border: 1px solid $color-w
+            background: $d
+            color: $w
+            border: 1px solid $w
 
-    &:active
+        &.disabledbtn
+            background: $font-color-disabled-w
+            color: $disabled-w-btn
+            border: 1px solid transparent
+            cursor: not-allowed
+
+    &:not(.disabledbtn):active
         transform: scale(0.95)
+
     .btn__text--d
         height: 20%
         width: 80%
-        background: $color-w
-        border-radius: $br-1
+        background: $w
+        border-radius: 10px
     .btn__text--p
         height: 20%
         width: 80%
-        background: $color-b
-        border-radius: $br-1
+        background: $d
+        border-radius: 10px
