--- a/src/app/stylesheets/variables.sass
+++ b/src/app/stylesheets/variables.sass
@@ -1,10 +1,7 @@
-//==COLORS==
-$color-p: #E33939
-$color-d: #FC98E6
-$color-b: #000000
-$color-b-p: #180C0C
-$color-w: #FFFFFF
-
-//==Borders==
-$br-1: 10px
-$br-2: 20px
+$d: #000000
+$w: #FFFFFF
+$d-card: #333
+$disabled-w-btn: #999
+$disabled-d-btn: #666
+$font-color-disabled-w: #666
+$font-color-disabled-d: #999
