Changes: - Added SVGS - In gif component Added compatibility for .mp4 files - Added ParesdIcons & ParsedLangs for json fetch - Added useDevice in aboutSection & projectSection - Added function remToPx in functions

--- a/src/app/components/ProjectCard/index.module.scss
+++ b/src/app/components/ProjectCard/index.module.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   animation-duration: 0.5s;
+  overflow: hidden;
 
   &:hover {
     transform: scale(1.05);
@@ -110,4 +111,10 @@
   display: flex;
   opacity: 1;
   transform: translateY(0px);
+}
+
+.iconWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
