--- a/src/app/components/ProjectCard/index.module.scss
+++ b/src/app/components/ProjectCard/index.module.scss
@@ -102,7 +102,7 @@
   padding: 5px;
   display: none;
   opacity: 0;
-  transform: translateY(-10px);
+  transform: translateY(-40px);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
   border-radius: 0.3rem;
 }
@@ -110,7 +110,8 @@
 .iconWrapper:hover .dropdown {
   display: flex;
   opacity: 1;
-  transform: translateY(0px);
+  transform: translateY(25px);
+  position: absolute;
 }
 
 .iconWrapper {
